--- a/all.css
+++ b/all.css
@@ -5,6 +5,7 @@ html {
 body {
 	color: #4d4d4d;
 	background-color: #f5f5f5;
+	margin: 12px;
 }
 
 main {
@@ -35,7 +36,89 @@ figcaption {
 	max-width: 576px
 }
 
-/* Utilities */
+figure img {
+	height: auto;
+}
+
+/* Components */
+.file-tree {
+	position: relative;
+	margin-block: 20px;
+	line-height: 1.5;
+	color: #212529;
+	list-style: none;
+}
+
+.file-tree ul {
+	margin: 0;
+	padding-left: 5px;
+	list-style: none;
+}
+
+.file-tree li {
+	position: relative;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 15px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.file-tree li::before {
+	position: absolute;
+	top: 15px;
+	left: 0;
+	width: 10px;
+	height: 1px;
+	margin: auto;
+	content: '';
+	background-color: #666;
+}
+
+.file-tree > ul > li::before,
+.file-tree > ul > li::after {
+	display: none;
+}
+
+.file-tree li::after {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 1px;
+	height: 100%;
+	content: '';
+	background-color: #666;
+}
+
+.file-tree li:last-child::after {
+	height: 15px;
+}
+
+.photo-gallery {
+	overflow: hidden;
+}
+
+.img-gallery {
+	display: flex;
+	flex-wrap: wrap;
+	row-gap: 8px;
+	column-gap: 8px;
+	padding: 24px;
+}
+
+.img-gallery > img {
+	object-fit: cover;
+	height: auto;
+}
+
+.img-gallery.-two-cols > img {
+	width: 45%;
+	height: auto;
+}
+
+/* Helpers */
 ._none {
 	display: none !important;
 }
@@ -44,6 +127,18 @@ figcaption {
 	object-fit: cover !important;
 }
 
+._contain {
+	object-fit: contain !important;
+}
+
+._mb-2 {
+	margin-bottom: 0.5rem !important;
+}
+
 ._mb-3 {
-	margin-bottom: 1rem;
+	margin-bottom: 1rem !important;
+}
+
+._mb-4 {
+	margin-bottom: 1.5rem !important;
 }
