--- a/all.css
+++ b/all.css
@@ -1,144 +1,173 @@
 html {
-	font-size: 16px;
+  height: 100%;
 }
 
 body {
-	color: #4d4d4d;
-	background-color: #f5f5f5;
-	margin: 12px;
+  min-height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
+body {
+  color: #4d4d4d;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding-inline: 12px;
 }
 
 main {
-	margin-bottom: 64px;
+  margin-bottom: 64px;
 }
 
 nav ul {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 nav ul li {
-	margin-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 img {
-	max-width: 100%;
+  max-width: 100%;
 }
 
 figure {
-	margin: 0;
+  margin: 0;
 }
 
 figcaption {
-	color: #666;
-}
-
-.container {
-	max-width: 576px
+  color: #666;
 }
 
 figure img {
-	height: auto;
+  height: auto;
+}
+
+hr {
+  margin: 0;
+  margin-bottom: revert;
 }
 
 /* Components */
+.container {
+  max-width: 576px;
+}
+
 .file-tree {
-	position: relative;
-	margin-block: 20px;
-	line-height: 1.5;
-	color: #212529;
-	list-style: none;
+  position: relative;
+  margin-block: 20px;
+  line-height: 1.5;
+  color: #212529;
+  list-style: none;
 }
 
 .file-tree ul {
-	margin: 0;
-	padding-left: 5px;
-	list-style: none;
+  margin: 0;
+  padding-left: 5px;
+  list-style: none;
 }
 
 .file-tree li {
-	position: relative;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	padding-left: 15px;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+  position: relative;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .file-tree li::before {
-	position: absolute;
-	top: 15px;
-	left: 0;
-	width: 10px;
-	height: 1px;
-	margin: auto;
-	content: '';
-	background-color: #666;
+  position: absolute;
+  top: 15px;
+  left: 0;
+  width: 10px;
+  height: 1px;
+  margin: auto;
+  content: "";
+  background-color: #666;
 }
 
 .file-tree > ul > li::before,
 .file-tree > ul > li::after {
-	display: none;
+  display: none;
 }
 
 .file-tree li::after {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	width: 1px;
-	height: 100%;
-	content: '';
-	background-color: #666;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  content: "";
+  background-color: #666;
 }
 
 .file-tree li:last-child::after {
-	height: 15px;
+  height: 15px;
 }
 
 .photo-gallery {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .img-gallery {
-	display: flex;
-	flex-wrap: wrap;
-	row-gap: 8px;
-	column-gap: 8px;
-	padding: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 8px;
+  column-gap: 8px;
+  padding: 24px;
 }
 
 .img-gallery > img {
-	object-fit: cover;
-	height: auto;
+  object-fit: cover;
+  height: auto;
 }
 
 .img-gallery.-two-cols > img {
-	width: 45%;
-	height: auto;
+  width: 45%;
+  height: auto;
+}
+
+.menu-links {
+  display: flex;
+}
+
+.menu-links > a {
+  display: inline-block;
+  padding: 16px;
 }
 
 /* Helpers */
 ._none {
-	display: none !important;
+  display: none !important;
 }
 
 ._cover {
-	object-fit: cover !important;
+  object-fit: cover !important;
 }
 
 ._contain {
-	object-fit: contain !important;
+  object-fit: contain !important;
 }
 
 ._mb-2 {
-	margin-bottom: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
 }
 
 ._mb-3 {
-	margin-bottom: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 
 ._mb-4 {
-	margin-bottom: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
