--- a/all.css
+++ b/all.css
@@ -22,11 +22,12 @@ body {
   margin: 0;
   padding-inline: 20px;
 
-  color: #4d4d4d;
-  background-color: #f5f5f5;
+  color: white;
+  background-color: hsl(0, 0%, 7%);
 }
 
 main {
+  padding-top: 32px;
   padding-bottom: 64px;
 }
 
@@ -55,7 +56,7 @@ figure {
 figcaption {
   font-size: 0.875rem;
 
-  color: #666;
+  color: hsl(0, 0%, 80%);
 }
 
 figure img {
@@ -73,12 +74,12 @@ a {
 
 a,
 a:active {
-  color: #0000ee;
+  color: #5ec8f2;
 }
 
 a:visited,
 a:visited:active {
-  color: #551a8b;
+  color: #9d7bc7;
 }
 
 a:hover,
@@ -88,45 +89,45 @@ a:active {
 
 /* Typography */
 @font-face {
-  font-family: "Roboto Slab";
-  src: url(./assets/RobotoSlab-Regular.ttf);
-  font-weight: 400;
+  font-family: "Fredoka";
+  src: url(./assets/Fredoka-Variable.ttf);
+  font-weight: 400 700;
   font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto Slab";
-  src: url(./assets/RobotoSlab-Medium.ttf);
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto Slab";
-  src: url(./assets/RobotoSlab-SemiBold.ttf);
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Roboto Slab";
-  src: url(./assets/RobotoSlab-Bold.ttf);
-  font-weight: 700;
-  font-style: normal;
+  font-display: swap;
 }
 
 body {
-  font-family: "Roboto Slab", serif;
+  font-family: "Fredoka", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  line-height: 1.5;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
+  font-size: 2rem;
   font-weight: 700;
   line-height: 1.15;
+
+  margin-block: 1.625rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+h3 {
+  font-size: 1.125rem;
+
+  margin-top: 1.5rem;
+  margin-bottom: 0.75rem;
 }
 
 h2,
@@ -136,16 +137,22 @@ h3 {
 
 h4,
 h5,
-h6,
-strong {
-  font-weight: 500;
+h6 {
+  font-size: 1rem;
+
+  margin-top: 1.25rem;
+  margin-block: 0.75rem;
 }
 
+strong {
+  font-weight: 600;
+}
 /* \ Typography */
 
 /* Components */
 .container {
-  max-width: 576px;
+  max-width: 340px;
+  margin-inline: auto;
 }
 
 .file-tree {
